Bug:  959465 Reviewer:  Self Comments:  Fixed wrap issue with the "both" whitelist/blacklist radio button in the desktop application dialog.
Files:
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -6077,7 +6077,8 @@ td.datePickerMonth {
 .fileSyncAppDlg_ModeHeader        {}
 .fileSyncAppDlg_ModePanel         {display: block; padding-top: 10px;}
 .fileSyncAppDlg_ModeRadio         {margin-left: 10px;}
-.fileSyncAppDlg_ModeRadio label   {font-size: 14px; padding-top: 5px; padding-left: 2px; display: inline-block;} 
+.fileSyncAppDlg_ModeRadio input   {display: inline;} 
+.fileSyncAppDlg_ModeRadio label   {font-size: 14px; padding-top: 5px; padding-left: 2px; display: inline;} 
 .fileSyncAppDlg_Radio             {}
 .fileSyncAppDlg_RestoreDefaults   {margin-top: 10px; margin-left: 10px;}
 .fileSyncAppDlg_SectionHeader     {font-size: 13px; font-weight: normal;}
